--- a/css/kv-apartments.css
+++ b/css/kv-apartments.css
@@ -17,8 +17,13 @@ body {
     shape-rendering: crispEdges;
 }
 
-form p {
+form div.unit {
     display: inline-block;
+    padding: 5px 5px 10px 10px;
+}
+
+form div.unit p {
+    display: inline;
 }
 
 input.narrow_numeric {
