fix webkit number input arrows

--- a/css/kv-apartments.css
+++ b/css/kv-apartments.css
@@ -78,3 +78,9 @@ a:link, a:visited, a:hover, a:active {
 button#submit_form {
     width: 100%;
 }
+
+input[type=number]::-webkit-inner-spin-button,
+input[type=number]::-webkit-outer-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
